--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ regex = "1"
 [dependencies.clap]
 version = "2.32"
 default-features = false
-features = [ "suggestions" ]
+features = [ "suggestions", "color" ]
