--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,12 @@ walkdir = "2"
 ansi_term = "0.11"
 regex = "1"
 atty = "0.2"
+lazy_static = "1.1.0"
 
 [dependencies.clap]
 version = "2.32"
 default-features = false
 features = [ "suggestions", "color" ]
+
+[build-dependencies]
+lazy_static = "1.1.0"
