--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "find-files"
-version = "0.1.2"
+version = "0.1.3"
 description = "Find Files (ff) utility recursively searches the files whose names match the specified RegExp pattern in the provided directory (defaults to the current directory if not provided)."
 authors = ["Vishal Telangre <the@vishaltelangre.com>"]
 license = "Unlicense OR MIT"
@@ -13,6 +13,7 @@ ansi_term = "0.11"
 regex = "1"
 atty = "0.2"
 lazy_static = "1.1.0"
+ignore = "0.4"
 
 [dependencies.clap]
 version = "2.32"
